--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -80,7 +80,9 @@ li {
  * Headings
  */
 h1, h2, h3, h4, h5, h6 {
-    font-weight: 300;
+    font-weight: normal;
+    // font-family: 'Playfair Display', serif;
+    font-family: 'Chau Philomene One', sans-serif;
 }
 
 
@@ -97,7 +99,7 @@ a {
     }
 
     &:hover {
-        color: $text-color;
+        //color: $text-color;
         text-decoration: underline;
     }
 }
@@ -127,24 +129,31 @@ blockquote {
  */
 pre,
 code {
-    font-size: 15px;
-    border: 1px solid $grey-color-light;
-    border-radius: 3px;
-    background-color: #eef;
+    font-size: 14px;
+    //border: 1px solid $grey-color-light;
+    //border-radius: 3px;
+
 }
 
 code {
     padding: 1px 5px;
+    background-color: #6d4c41;
+    color: #ffd740;
+    //box-shadow: 2px 2px 2px  rgba(0, 0, 0, 0.1);
 }
 
 pre {
     padding: 8px 12px;
     overflow-x: scroll;
+    background-color: #fffde7;
+    box-shadow: 2px 2px 2px  rgba(0, 0, 0, 0.1);
 
     > code {
         border: 0;
         padding-right: 0;
         padding-left: 0;
+        background-color: inherit !important;
+        color: inherit !important;
     }
 }
 
